[workspace]
resolver = "2"
members = [
    "contracts/*",
    "packages/*"
]

[profile.release]
opt-level = 'z'
debug = false
rpath = false
lto = true
debug-assertions = false
codegen-units = 1
panic = 'abort'
incremental = false
overflow-checks = true

[patch."https://github.com/astroport-fi/hidden_astroport_governance.git"]
astroport-governance = { git = "ssh://git@github.com/astroport-fi/hidden_astroport_governance.git" }

[patch."https://github.com/astroport-fi/hidden_astroport_core.git"]
astroport = { git = "ssh://git@github.com/astroport-fi/hidden_astroport_core.git" }