[workspace]
resolver = "2"
members = [
    "contracts/*",
    "packages/*"
]

[workspace.dependencies]
astroport-governance = { git = "https://github.com/astroport-fi/astroport-governance", version = "1" }
astroport-ibc = { path = "packages/astroport-ibc", version = "1" }
cosmwasm-std = "1.5"
cosmwasm-storage = "1.5"
cw-storage-plus = "0.15"
cosmwasm-schema = "1.5"
cw2 = "1"
thiserror = "1.0"
cw-utils = "1"
itertools = "0.12"

[profile.release]
opt-level = 'z'
debug = false
rpath = false
lto = true
debug-assertions = false
codegen-units = 1
panic = 'abort'
incremental = false
overflow-checks = true

[patch.crates-io]
astro-satellite-package = { path = "packages/satellite" }