[workspace]
resolver = "2"
members = [
    "contracts/*",
    "packages/*"
]

[workspace.dependencies]
astroport-governance = "4"
astroport = "5"
astroport-ibc = { path = "packages/astroport-ibc", version = "1" }
cosmwasm-std = "1.5"
cw-storage-plus = "1"
cosmwasm-schema = "1.5"
cw2 = "1"
thiserror = "1.0"

[profile.release]
opt-level = 'z'
debug = false
rpath = false
lto = true
debug-assertions = false
codegen-units = 1
panic = 'abort'
incremental = false
overflow-checks = true

[patch.crates-io]
astro-satellite-package = { path = "packages/satellite" }