[package]
name = "ibc-controller"
version = "0.1.0"
authors = ["Astroport"]
license = "Apache-2.0"
description = "IBC controller contract intended to be hosted on the main chain."
repository = "https://github.com/astroport-fi/astroport_ibc"
homepage = "https://astroport.fi"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
# for more explicit tests, cargo test --features=backtraces
backtraces = ["cosmwasm-std/backtraces"]
# use library feature to disable all instantiate/execute/query exports
# library = []

[dependencies]
cosmwasm-std = { version = "1.0.0", features = ["ibc3"] }
cosmwasm-storage = "1.0.0"
cw-storage-plus = "0.13.2"
cw2 = "0.13.2"
serde = { version = "1.0.137", default-features = false, features = ["derive"] }
schemars = "0.8"
thiserror = { version = "1.0.31" }
astro-ibc = { path = "../../astro_ibc" }

[dev-dependencies]
cosmwasm-schema = "1.0.0"
cw-multi-test = "0.13.2"
