[package]
name = "astroport-ibc-controller"
version = "0.1.1"
authors = ["Astroport"]
license = "GPL-3.0-only"
description = "IBC controller contract intended to be hosted on the main chain."
repository = "https://github.com/astroport-fi/astroport_ibc"
homepage = "https://astroport.fi"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
# for more explicit tests, cargo test --features=backtraces
backtraces = ["cosmwasm-std/backtraces"]
# use library feature to disable all instantiate/execute/query exports
library = []

[dependencies]
cosmwasm-std = { version = "1.1", features = ["ibc3"] }
cw-storage-plus = "0.15"
cw2 = "0.15"
thiserror = { version = "1.0" }
ap-ibc-controller = { path = "../../packages/controller" }
ap-ibc-satellite = { path = "../../packages/satellite" }
cosmwasm-schema = "1.1"
