[package]
name = "ibc-controller"
version = "1.0.0"
authors = ["Astroport"]
license = "Apache-2.0"
description = "IBC controller contract intended to be hosted on the main chain."
repository = "https://github.com/astroport-fi/astroport_ibc"
homepage = "https://astroport.fi"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
# for more explicit tests, cargo test --features=backtraces
backtraces = ["cosmwasm-std/backtraces"]
# use library feature to disable all instantiate/execute/query exports
# library = []

[dependencies]
cosmwasm-std = { version = "1.1", features = ["ibc3"] }
cosmwasm-storage = "1.1"
cw-storage-plus = "0.15"
cw2 = "0.15"
thiserror = "1.0"
ibc-controller-package = { path = "../../packages/controller" }
astro-satellite-package = { path = "../../packages/satellite" }
astroport-ibc = { path = "../../packages/astroport-ibc" }
cosmwasm-schema = "1.1"

[dev-dependencies]
cw-multi-test = "0.15"
