[package]
name = "astroport-cw20-ics20"
version = "0.15.1-astroport"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
library = []

[dependencies]
cw20-ics20 = { version = "=0.15.1", features = ["library"] }
cosmwasm-std = "1.1"
cw2 = "1"

[dev-dependencies]
cosmwasm-schema = "1.1"
