[package]
name = "astro-satellite"
version = "1.1.0"
authors = ["Astroport"]
license = "GPL-3"
description = "IBC enabled astroport satellite contract intended to be hosted on a remote chain."
repository = "https://github.com/astroport-fi/astroport_ibc"
homepage = "https://astroport.fi"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
# for more explicit tests, cargo test --features=backtraces
backtraces = ["cosmwasm-std/backtraces"]
# use library feature to disable all instantiate/execute/query exports
library = []
# this feature disables instantiate/execute/migrate exports so neutron specific version
# can reimplement them
neutron = []
default = []

[dependencies]
cosmwasm-std = { version = "1.1", features = ["ibc3"] }
cosmwasm-storage = "1.1"
cw-storage-plus = "0.15"
cw2 = "0.15"
thiserror = "1.0"
cw-utils = "0.15"
ibc-controller-package = { path = "../../packages/controller", version = "1.0.0" }
astro-satellite-package = { path = "../../packages/satellite", version = "1.0.0" }
astroport-ibc = { path = "../../packages/astroport-ibc", version = "1.2.1" }
itertools = "0.10"
cosmwasm-schema = "1.1"

[dev-dependencies]
astroport-mocks = { path = "../../packages/astroport_mocks" }
