[package]
name = "astro-satellite"
version = "1.2.0"
authors = ["Astroport"]
license = "GPL-3.0-only"
description = "IBC enabled astroport satellite contract intended to be hosted on a remote chain."
repository = "https://github.com/astroport-fi/astroport_ibc"
homepage = "https://astroport.fi"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
# for more explicit tests, cargo test --features=backtraces
backtraces = ["cosmwasm-std/backtraces"]
# use library feature to disable all instantiate/execute/query exports
library = []

[dependencies]
cosmwasm-std = { workspace = true, features = ["ibc3"] }
cosmwasm-storage = { workspace = true }
cw-storage-plus = { workspace = true }
cw2 = { workspace = true }
thiserror = { workspace = true }
ibc-controller-package = { path = "../../packages/controller", version = "1.0.0" }
astro-satellite-package = { path = "../../packages/satellite", version = "1.0.0" }
astroport-ibc = { workspace = true }
itertools = { workspace = true }
cosmwasm-schema = { workspace = true }

[dev-dependencies]
astroport-mocks = { path = "../../packages/astroport_mocks" }
