[package]
name = "astro-satellite-neutron"
version = "1.1.0"
authors = ["Astroport"]
license = "GPL-3.0-only"
description = """
IBC enabled astroport satellite contract intended to be hosted on a remote chain.
This is an extended version of the original astro-satellite contract.
"""
repository = "https://github.com/astroport-fi/astroport_ibc"
homepage = "https://astroport.fi"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
library = []

[dependencies]
# features = ["neutron"] allows to import all IBC-related endpoints as well as reply/query endpoints.
astro-satellite = { path = "../satellite", version = "1.1.0-hubmove", features = ["neutron"] }
astro-satellite-package = { path = "../../packages/satellite", version = "1.0.0" }
astroport-ibc = { path = "../../packages/astroport-ibc", version = "1.2.1" }
cosmwasm-std = "1.5"
cw-utils = "1"
cw2 = "1"
neutron-sdk = "0.8.0"

[dev-dependencies]
astroport-mocks = { path = "../../packages/astroport_mocks" }
cosmwasm-schema = "1"